--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -9,6 +9,63 @@
 }
 
 .center-col {
-    text-align: -webkit-center;
-    margin: 20px 0;
+  text-align: -webkit-center;
+  margin: 20px 0;
+}
+
+.description {
+  width: 60%;
+}
+
+.bar {
+  background-color: #343a40;
+  width: 60%;
+  border-radius: 5px;
+  color: white;
+}
+
+.flip-card {
+  background-color: transparent;
+  width: 45vh;
+  height: 45vh;
+  perspective: 1000px;
+  border: none;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-card-back {
+  background-color: #343a40;
+  color: white;
+  transform: rotateY(180deg);
+  height: 100%;
+  border-radius: 0.25rem;
+}
+
+.margins {
+  margin: 5vh;
 }
