--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -13,10 +13,6 @@
   margin: 20px 0;
 }
 
-.description {
-  width: 60%;
-}
-
 .bar {
   background-color: #343a40;
   width: 60%;
@@ -73,4 +69,12 @@
 .hideback {
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
+}
+
+.w-60 {
+  width: 60%;
+}
+
+.slideBack {
+  background-color: rgba(0, 0, 0, 0.8);
 }
