CSS delete !important

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -118,7 +118,7 @@
   right: 10px;
 }
 
-.row {
-  margin-left: 0 !important;
-  margin-right: 0 !important;
+#content .row{
+  margin-left: 0;
+  margin-right: 0;
 }
