Add emoji selection and name input

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -144,3 +144,11 @@
   justify-content: center;
   display: flex;
 }
+
+input:checked + .emojis {
+  background-color: green;
+}
+
+.hide {
+  display: none;
+}
